force-app/main/default/objects/Organization_Structure__c/Organization_Structure__c.object-meta.xml
<CustomObject>
    <label>Organization Structure</label>
    <nameField>
        <displayFormat>TRTY-{00000}</displayFormat>
        <label>Organization Structure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>