force-app/main/default/objects/Organization_Structure__c/fields/Distribution_Channel_NEW_FIELD__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel_NEW_FIELD__c</fullName>
    <label>Distribution Channel NEW FIELD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>