force-app/main/default/objects/Organization_Structure__c/fields/Division_NEW_FIELD__c.field-meta.xml
<CustomField>
    <fullName>Division_NEW_FIELD__c</fullName>
    <label>Division NEW FIELD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>