force-app/main/default/objects/Organization_Structure__c/fields/Sales_District__c.field-meta.xml
<CustomField>
    <fullName>Sales_District__c</fullName>
    <label>Sales District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>