force-app/main/default/objects/Organization_Structure__c/fields/Sales_District_NEW_FIELD__c.field-meta.xml
<CustomField>
    <fullName>Sales_District_NEW_FIELD__c</fullName>
    <label>Sales District NEW FIELD</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Group_NEW_FIELD__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>AU0010</fullName>
            </value>
            <value>
                <fullName>AU0020</fullName>
            </value>
            <value>
                <fullName>AU0030</fullName>
            </value>
            <value>
                <fullName>AU0035</fullName>
            </value>
            <value>
                <fullName>AU0040</fullName>
            </value>
            <value>
                <fullName>AU0050</fullName>
            </value>
            <value>
                <fullName>AU0052</fullName>
            </value>
            <value>
                <fullName>AU0055</fullName>
            </value>
            <value>
                <fullName>AU0060</fullName>
            </value>
            <value>
                <fullName>AU0070</fullName>
            </value>
            <value>
                <fullName>AU0075</fullName>
            </value>
            <value>
                <fullName>AU0080</fullName>
            </value>
            <value>
                <fullName>AU0090</fullName>
            </value>
            <value>
                <fullName>AU0100</fullName>
            </value>
            <value>
                <fullName>AU0105</fullName>
            </value>
            <value>
                <fullName>AU0110</fullName>
            </value>
            <value>
                <fullName>AU0115</fullName>
            </value>
            <value>
                <fullName>AU0120</fullName>
            </value>
            <value>
                <fullName>AU0125</fullName>
            </value>
            <value>
                <fullName>AU0130</fullName>
            </value>
            <value>
                <fullName>AU0135</fullName>
            </value>
            <value>
                <fullName>AU0140</fullName>
            </value>
            <value>
                <fullName>AU0150</fullName>
            </value>
            <value>
                <fullName>AU0160</fullName>
            </value>
            <value>
                <fullName>AU0170</fullName>
            </value>
            <value>
                <fullName>AU0180</fullName>
            </value>
            <value>
                <fullName>AU0181</fullName>
            </value>
            <value>
                <fullName>AU0182</fullName>
            </value>
            <value>
                <fullName>AU0183</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>