force-app/main/default/objects/Organization_Structure__c/fields/Sales_Group_NEW_FIELD__c.field-meta.xml
<CustomField>
    <fullName>Sales_Group_NEW_FIELD__c</fullName>
    <label>Sales Group NEW FIELD</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Office_NEW_FIELD__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>007</fullName>
            </value>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>009</fullName>
            </value>
            <value>
                <fullName>010</fullName>
            </value>
            <value>
                <fullName>021</fullName>
            </value>
            <value>
                <fullName>022</fullName>
            </value>
            <value>
                <fullName>023</fullName>
            </value>
            <value>
                <fullName>024</fullName>
            </value>
            <value>
                <fullName>025</fullName>
            </value>
            <value>
                <fullName>030</fullName>
            </value>
            <value>
                <fullName>031</fullName>
            </value>
            <value>
                <fullName>033</fullName>
            </value>
            <value>
                <fullName>034</fullName>
            </value>
            <value>
                <fullName>035</fullName>
            </value>
            <value>
                <fullName>037</fullName>
            </value>
            <value>
                <fullName>039</fullName>
            </value>
            <value>
                <fullName>AE1</fullName>
            </value>
            <value>
                <fullName>AL1</fullName>
            </value>
            <value>
                <fullName>AM1</fullName>
            </value>
            <value>
                <fullName>AT1</fullName>
            </value>
            <value>
                <fullName>AT2</fullName>
            </value>
            <value>
                <fullName>AU1</fullName>
            </value>
            <value>
                <fullName>AZ1</fullName>
            </value>
            <value>
                <fullName>BA1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>