force-app/main/default/objects/Organization_Structure__c/fields/Sales_Office_NEW_FIELD__c.field-meta.xml
<CustomField>
    <fullName>Sales_Office_NEW_FIELD__c</fullName>
    <label>Sales Office NEW FIELD</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Organization_NEW__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>6108</fullName>
            </value>
            <value>
                <fullName>6109</fullName>
            </value>
            <value>
                <fullName>6111</fullName>
            </value>
            <value>
                <fullName>6112</fullName>
            </value>
            <value>
                <fullName>6113</fullName>
            </value>
            <value>
                <fullName>AM01</fullName>
            </value>
            <value>
                <fullName>BE01</fullName>
            </value>
            <value>
                <fullName>BR01</fullName>
            </value>
            <value>
                <fullName>BR02</fullName>
            </value>
            <value>
                <fullName>BR03</fullName>
            </value>
            <value>
                <fullName>BR04</fullName>
            </value>
            <value>
                <fullName>CA01</fullName>
            </value>
            <value>
                <fullName>CA02</fullName>
            </value>
            <value>
                <fullName>CA03</fullName>
            </value>
            <value>
                <fullName>CA04</fullName>
            </value>
            <value>
                <fullName>CL01</fullName>
            </value>
            <value>
                <fullName>CL02</fullName>
            </value>
            <value>
                <fullName>CL03</fullName>
            </value>
            <value>
                <fullName>CL04</fullName>
            </value>
            <value>
                <fullName>CL05</fullName>
            </value>
            <value>
                <fullName>CL06</fullName>
            </value>
            <value>
                <fullName>CL07</fullName>
            </value>
            <value>
                <fullName>CL08</fullName>
            </value>
            <value>
                <fullName>CL09</fullName>
            </value>
            <value>
                <fullName>CL10</fullName>
            </value>
            <value>
                <fullName>CL11</fullName>
            </value>
            <value>
                <fullName>CL12</fullName>
            </value>
            <value>
                <fullName>CL13</fullName>
            </value>
            <value>
                <fullName>CL14</fullName>
            </value>
            <value>
                <fullName>CL15</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>