force-app/main/default/objects/Organization_Structure__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <length>50</length>
    <type>Text</type>
</CustomField>