force-app/main/default/objects/Organization_Structure__c/fields/Sales_Organization_NEW__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization_NEW__c</fullName>
    <label>Sales Organization NEW FIELD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>6101</fullName>
            </value>
            <value>
                <fullName>6300</fullName>
            </value>
            <value>
                <fullName>9760</fullName>
            </value>
            <value>
                <fullName>AM01</fullName>
            </value>
            <value>
                <fullName>AME</fullName>
            </value>
            <value>
                <fullName>BR01</fullName>
            </value>
            <value>
                <fullName>CA01</fullName>
            </value>
            <value>
                <fullName>CL01</fullName>
            </value>
            <value>
                <fullName>CL02</fullName>
            </value>
            <value>
                <fullName>CL03</fullName>
            </value>
            <value>
                <fullName>CL04</fullName>
            </value>
            <value>
                <fullName>CL05</fullName>
            </value>
            <value>
                <fullName>CL06</fullName>
            </value>
            <value>
                <fullName>CN01</fullName>
            </value>
            <value>
                <fullName>CN02</fullName>
            </value>
            <value>
                <fullName>CN04</fullName>
            </value>
            <value>
                <fullName>CN09</fullName>
            </value>
            <value>
                <fullName>CZ01</fullName>
            </value>
            <value>
                <fullName>DE01</fullName>
            </value>
            <value>
                <fullName>ES01</fullName>
            </value>
            <value>
                <fullName>FI01</fullName>
            </value>
            <value>
                <fullName>FR01</fullName>
            </value>
            <value>
                <fullName>GB01</fullName>
            </value>
            <value>
                <fullName>HU01</fullName>
            </value>
            <value>
                <fullName>ID01</fullName>
            </value>
            <value>
                <fullName>IT01</fullName>
            </value>
            <value>
                <fullName>KZ01</fullName>
            </value>
            <value>
                <fullName>MA01</fullName>
            </value>
            <value>
                <fullName>MX01</fullName>
            </value>
            <value>
                <fullName>MX02</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>