force-app/main/default/objects/Organization_Structure__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <formula>IF(ISBLANK(Sales_District__c) , Sales_Group__c +&apos;_&apos;+ Sales_Office__c +&apos;_&apos;+ Sales_Organization__c, Sales_District__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territory Name</label>
    <type>Text</type>
</CustomField>