force-app/main/default/objects/Organization_Structure__c/fields/Territoty_ID__c.field-meta.xml
<CustomField>
    <fullName>Territoty_ID__c</fullName>
    <label>Territoty ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>