force-app/main/default/objects/Organization_Structure__c/fields/UNIQID__c.field-meta.xml
<CustomField>
    <fullName>UNIQID__c</fullName>
    <description>Unique Id That Only Use for Sales Area Details Query</description>
    <externalId>true</externalId>
    <label>Unique_SA_Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>