force-app/main/default/objects/Organization_Structure__c/listViews/All_Organization_Structures.listView-meta.xml
<ListView>
    <fullName>All_Organization_Structures</fullName>
    <columns>NAME</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Distribution_Channel__c</columns>
    <columns>Division__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>Sales_Group__c</columns>
    <columns>Sales_District__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>SGT__c</columns>
    <columns>Status__c</columns>
    <columns>Territoty_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Organization Structures</label>
</ListView>