force-app/main/default/objects/Organization_Structure__c/listViews/SGT.listView-meta.xml
<ListView>
    <fullName>SGT</fullName>
    <columns>NAME</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Distribution_Channel__c</columns>
    <columns>Division__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>Sales_Group__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Territoty_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SGT__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SGT</label>
</ListView>